<resources>
    <string name="app_name">TravelDux</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shopping">shopping</string>
    <string name="busstation">busstation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurants">restaurants</string>
    <string name="railwaystation">railwaytation</string>
    <string name="map">map</string>
    <string name="cab">cab</string>
    <string name="resort">resort</string>
    <string name="helpline">helpline</string>
    <string name="railwayStation">railwayStation</string>
    <string name="Shopping">Shopping</string>
    <string name="BusStation">BusStation</string>
    <string name="RailwayStation">RailwayStation</string>
    <string name="Map">Map</string>
    <string name="Cab">Cab</string>
    <string name="Resort">Resort</string>
    <string name="Helpline">Helpline</string>
    <string name="feedback">feedback</string>
    <string name="profile">profile</string>
</resources>